[project]
name = "hemera"
version = "0.1.0"
authors = [
    {name = "xuzh", email = "zihao.xu@thehemera.com"},
    {name = "shanshuo0918", email = "shuo.shan@lifo.ai"}
]
description = "Tools for exporting Ethereum blockchain data to JSON/CSV file and postgresql"
readme = "README.md"
requires-python = ">=3.8,<4"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["ethereum", "indexer", "explorer", "hemera"]

dependencies = [
    "web3>=6.8.0, <7",
    "eth-utils>=4.0.0",
    "eth-abi>=5.0.1",
    "python-dateutil>=2.8.0,<3",
    "click>=8.0.4,<9",
    "ethereum-dasm==0.1.5",
    "requests",
    "sqlalchemy==2.0.31",
    "psycopg2-binary==2.9.9",
    "alembic",
    "pandas",
    "Flask==3.0.3",
    "Flask-Caching==2.3.0",
    "Flask-Cors==3.0.9",
    "flask-limiter==3.8.0",
    "flask-restx==1.3.0",
    "Flask-SQLAlchemy==3.1.1",
    "blinker>=1.8.2",
    "Werkzeug==3.0.3",
    "openpyxl==3.1.3",
    "redis==5.0.7",
    "urllib3==2.2.2",
    "dataclass-wizard==0.22.3",
    "redis-dict",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.optional-dependencies]
streaming = ["grpcio==1.46.3"]
dev = ["pytest>=7.0.0"]

[project.urls]
"Homepage" = "https://github.com/HemeraProtocol/hemera-indexer"
"Bug Reports" = "https://github.com/HemeraProtocol/hemera-indexer/issues"
"Source" = "https://github.com/HemeraProtocol/hemera-indexer"

[project.scripts]
hemera = "hemera.cli:cli"

[tool.setuptools]
packages = ["cli", "common", "api", "indexer"]

[tool.setuptools.package-data]
hemera = ["*.json", "*.yaml"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^21.5b0"
isort = "^5.9.1"
flake8 = "^3.9.2"
ruff = "^0.0.235"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = false
include_trailing_comma = true
line_length = 120

[tool.pytest.ini_options]
markers = [
    "serial: run this test in single thread",
    "indexer: Tests related to indexer",
    "indexer_exporter: Tests related to the indexer exporter",
    "indexer_utils: Tests related to the indexer utils",
    "indexer_bridge: Tests related to the indexer bridge",
    "indexer_bridge_optimism: Tests related to the indexer bridge optimism",
    "indexer_bridge_arbitrum: Tests related to the indexer bridge arbitrum",
    "indexer_jobs: Tests related to the indexer jobs",
    "indexer_jobs_user_ops: Tests related to the indexer jobs user ops",

    # API related
    "explorer_api: Test explorer related API",
]